deploy/salesforce/objects/QmsSettings__c/QmsSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>QMS GenAI integration settings: webhook secret, tenant id, API host.</description>
    <label>QMS Settings</label>
</CustomObject>