deploy/salesforce/objects/QmsSettings__c/fields/Api_Host__c.field-meta.xml
<CustomField>
    <fullName>Api_Host__c</fullName>
    <description>Base URL of the QMS GenAI Platform, used to build "Open in QMS" deep links from the LWC.</description>
    <label>API Host</label>
    <type>Url</type>
</CustomField>