deploy/salesforce/objects/QmsSettings__c/fields/Api_Key__c.field-meta.xml
<CustomField>
    <fullName>Api_Key__c</fullName>
    <description>Optional QMS API key override. When populated, Apex sends this value as X-API-Key instead of the Named Credential password merge field.</description>
    <label>API Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>