deploy/salesforce/objects/QmsSettings__c/fields/Tenant_Id__c.field-meta.xml
<CustomField>
    <fullName>Tenant_Id__c</fullName>
    <description>QMS tenant slug sent as X-Tenant-Id on outbound webhooks.</description>
    <label>Tenant Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>