deploy/salesforce/objects/QmsSettings__c/fields/Webhook_Secret__c.field-meta.xml
<CustomField>
    <fullName>Webhook_Secret__c</fullName>
    <description>HMAC-SHA256 shared secret for signing outbound webhooks to QMS GenAI.</description>
    <label>Webhook Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>